syntax = "proto3";

package proto;

option go_package = "./proto;sellerpb";

message Seller {
  int32 id = 1;
  string name = 2;
}

message Empty {}

message SellerId {
  int32 id = 1;
}

message SellerList {
  repeated Seller sellers = 1;
}

service SellerService {
  rpc GetAllSellers (Empty) returns (SellerList);
  rpc GetSellerByID (SellerId) returns (Seller);
}
